--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
     <meta property="og:url" content="https://jgvicente.xyz" />
     <meta property="og:title" content="Portfolio" />
     <meta property="og:description" content="Jean-Guillaume Vicente - Développeur Fullstack" />
-    <meta property="og:image" content="URL_IMAGE" />
+    <meta property="og:image" content="../src/assets/bouletmaton.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://jgvicente.xyz" />
     <meta property="twitter:title" content="Portfolio de Yangui1982" />
     <meta property="twitter:description" content="Portfolio de Yangui1982 - Développeur Fullstack" />
-    <meta property="twitter:image" content="URL_IMAGE" />
+    <meta property="twitter:image" content="../src/assets/bouletmaton.png" />
 
     <link rel="canonical" href="https://jgvicente.xyz" />
 
