--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <!-- <link rel="manifest" href="manifest.json"> -->
     <link rel="shortcut icon" href="favicon.ico">
 
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" type="text/css" href="/src/index.css">
   </head>
   <body id='secaccueil'>
