--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <link rel="shortcut icon" href="favicon.ico"><link rel="stylesheet" href="/src/index.css">
 
     <script defer="defer" src="/portfolio/static/js/main.5e376b3d.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link href="/portfolio/static/css/main.b1291fb9.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/src/index.css">
+
   </head>
 
   <body id="secaccueil">
