--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script defer="defer" src="/portfolio/static/js/main.5e376b3d.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" type="text/css" href="/src/index.css">
+    <link rel="stylesheet" type="text/css" href="/src/style/App.scss">
 
   </head>
 
